# leilao_ia_2

./: .cursorrules  .gitignore  AGENTS.md  Lista de imoveis-teste.csv  README.md  leilao-ia-com-referencia.code-workspace  pyproject.toml  pytest.ini
archive/: README.md
archive/codigo_referencia/: .cursorrules  Casa lessa.json  HISTORICO_INTERACOES.md  Lista_leiloes (Cópia).xlsx  Lista_leiloes.xlsx  Sem título 2.odt  anuncios_mercado.py  financial_agent.py  frontend_streamlit.py  geocoding.py  gotrue_httpx_compat.py  ingestion_agent.py  leilao_constants.py  pricing_pipeline.py  pw-SupaBase-leilao-ia.odt  requirements.txt  supabase_ddls_leilao_ia.sql  token_efficiency.py  valuation_agent.py  verificar_setup.py  www.vivareal.com.br_venda_rio-grande-do-sul_gravatai_bairros_sao-vicente_condominio_residencial_.2026-04-16T14_20_59.164Z.md
docs/: DEPLOY.md  SUPABASE_AUDIT.md
docs/vivareal/: Bairros de cada zona da cidade de São Paulo.md  Bairros de cada zona da cidade do Rio de Janeiro.md
leilao_ia_v2/: .~lock.Lista de imoveis-teste.csv#  .~lock.Lista_imoveis_SP.csv#  .~lock.PARAMETROS ENV.odt#  .~lock.relatorio gemini.odt#  Lista de imoveis-teste.csv  Lista_imoveis_SP.csv  PARAMETROS ENV.odt  __init__.py  app_assistente_ingestao.py  app_ingestao.py  busca viva real.odt  calculo rapido-exemplo.xlsx  compat_gotrue_httpx.py  constants.py  exceptions.py  normalizacao.py  planilha_urls.py  portal.kenlo.com.br_imoveis_taubate_condominio-villagio-d-italia.2026-04-27T01_36_49.454Z.md  relatorio gemini.odt  requirements.txt  supabase_client.py
leilao_ia_v2/agents/: __init__.py  (+3 more)
(+184 files in other folders)
