[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# Metadados mínimos para `pip install -e .` sem resolver dependências pesadas aqui.
# Instale primeiro: pip install -r leilao_ia_v2/requirements.txt

[project]
name = "leilao-ia-v2"
version = "2.0.0"
description = "Leilão IA v2 — ingestão, simulação, comparáveis (Supabase + Firecrawl + Streamlit)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["leilao_ia_v2*"]

[tool.pytest.ini_options]
testpaths = ["leilao_ia_v2/tests"]
pythonpath = ["."]
addopts = "-q"
